#ifndef GAME_H
#define GAME_H

#include "player.h"
#include "race.h"
#include <memory>
#include <string>
#include <vector>

class game {
private:
    player mPlayer;
    std::vector<std::unique_ptr<race>> mRaces;
    const std::string mSaveFile = SAVE_FILE_PATH;

public:
    game();

    void run();

private:
    [[nodiscard]] bool can_player_continue() const;
    void save_progress() const;
    void show_main_menu();
    void handle_main_menu(int pChoice);
    void choose_race();
    void start_race(race* pRace);
    void visit_shop();
    void visit_museum();
};

#endif // GAME_H
